fix styling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
   font-family: "Noto Sans", sans-serif;
   font-style: normal;
 }
